github_actions changes

--- a/.github/workflows/hcx-platform-docker-build.yml
+++ b/.github/workflows/hcx-platform-docker-build.yml
@@ -62,15 +62,18 @@ jobs:
           tags: swasth2021/hcx-api:${{ env.IMAGE_TAG }}_${{ github.run_number }}
           labels: hcx-api image
 
-      - name: Build and push Docker image for HCX Scheduler Job
-        uses: docker/build-push-action@v3
+      - name: Configure AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          context: ./hcx-scheduler-jobs
-          push: true
-          tags: swasth2021/hcx-scheduler-jobs:${{ env.IMAGE_TAG }}_${{ github.run_number }}
-          labels: hcx-scheduler-jobs image
-      - run: |
-          mkdir -p ~/image/
-          echo ${{ env.IMAGE_TAG }}_${{ github.run_number }} > ~/image/tag.txt
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Build and push Docker image for HCX Scheduler Job to S3 bucket
+        run: |
+          echo ${{ env.IMAGE_TAG }}_${{ github.run_number }} > /tmp/tag.txt
+          aws s3 cp /tmp/tag.txt s3://build-tags/tag.txt
+
+
           
           
