--- a/.github/workflows/hcx-platform-docker-build.yml
+++ b/.github/workflows/hcx-platform-docker-build.yml
@@ -71,9 +71,12 @@ jobs:
 
       - name: Build and push Docker image for HCX Scheduler Job to S3 bucket
         run: |
-          echo ${{ env.IMAGE_TAG }}_${{ github.run_number }} > /tmp/tag.txt
+          echo ${{ env.IMAGE_TAG }}_${{ github.run_number }} >> /tmp/tag.txt
           aws s3 cp /tmp/tag.txt s3://build-tags/tag.txt
 
 
           
           
+
+
+
