--- a/.github/workflows/hcx-platform-docker-build.yml
+++ b/.github/workflows/hcx-platform-docker-build.yml
@@ -74,7 +74,7 @@ jobs:
           echo ${{ env.IMAGE_TAG }}_${{ github.run_number }} >> /tmp/tag.txt
           aws s3 cp /tmp/tag.txt s3://build-tags/tag.txt
 
-
+##To test
           
           
 
