github_actions changes

--- a/.github/workflows/hcx-platform-docker-build.yml
+++ b/.github/workflows/hcx-platform-docker-build.yml
@@ -91,6 +91,6 @@ jobs:
 
       - name: Build and push Docker image for HCX Scheduler Job to S3 bucket
         run: |
-          echo ${{ env.IMAGETAG }}${{ github.run_number }} >> /tmp/tag.txt
+          echo ${{ env.IMAGETAG }}_${{ github.run_number }} >> /tmp/tag.txt
           cat /tmp/tag.txt
           aws s3 cp /tmp/tag.txt s3://build-tags/tag.txt
