--- a/.github/workflows/hcx-pipeline-jobs-docker-build.yml
+++ b/.github/workflows/hcx-pipeline-jobs-docker-build.yml
@@ -63,4 +63,5 @@ jobs:
       - name: Build and push Docker image for HCX Scheduler Job to S3 bucket
         run: |
           echo ${{ env.IMAGE_TAG }}_${{ github.run_number }} >> /tmp/tag.txt
+          cat /tmp/tag.txt
           aws s3 cp /tmp/tag.txt s3://build-tags/tag.txt
